# Filler

./: .gitignore  CMakeLists.txt  Makefile  filler.trace
inc/: color.h  filler.h  libft.h
libft/: Makefile  ft_abs.c  ft_arraystrfree.c  ft_arraystrnew.c  ft_strsplit.c
libft/gnl/: get_next_line.c  get_next_line.h
libft/gnl/libft/: Makefile  ft_lstnew.c  ft_lstremove.c  libft.h
resources/: filler.trace
src/: board_support.c  filler.c  main.c  research_place.c  search_place.c  set_support.c  set_token_coord.c  start_game.c  usage.c
